add task routes demo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     container_name: celery
     build:
       context: ./dcelery
-    command: celery --app=dcelery worker -l INFO
+    command: celery --app=dcelery worker -l INFO -Q queue1
     volumes:
       - ./dcelery:/user/src/app/
     environment:
@@ -36,7 +36,7 @@ services:
     build:
       context: ./celery_worker
       dockerfile: Dockerfile
-    command: celery -A celerytask worker -l INFO
+    command: celery -A celerytask worker -l INFO -Q queue2
     volumes:
       - ./celery_worker:/user/src/app/
     depends_on:
