--- a/dcelery/requirements.txt
+++ b/dcelery/requirements.txt
@@ -1,19 +1,33 @@
 amqp==5.3.1
 asgiref==3.8.1
+asttokens==3.0.0
 billiard==4.2.1
 celery==5.4.0
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+decorator==5.1.1
 Django==5.1.5
+executing==2.2.0
+ipython==8.32.0
+jedi==0.19.2
 kombu==5.4.2
+matplotlib-inline==0.1.7
+parso==0.8.4
+pexpect==4.9.0
+pika==1.3.2
 prompt_toolkit==3.0.50
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
 redis==5.2.1
 setuptools==75.8.0
 six==1.17.0
 sqlparse==0.5.3
+stack-data==0.6.3
+traitlets==5.14.3
 tzdata==2025.1
 vine==5.1.0
 wcwidth==0.2.13
